Add Ghostty, Mise, MCPHub configs; update Zed
Add Ghostty config with theme, font, padding and split/resize
keybindings. Create Mise tool versions and npm/pipx settings. Register
multiple servers in mcphub/servers.json (context7, serena, fetch, git,
memory). Add empty lazygit config file. Enable Zed
auto_install_extensions for html, php and biome.

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -80,5 +80,10 @@
   },
   "features": {
     "edit_prediction_provider": "copilot"
+  },
+  "auto_install_extensions": {
+    "html": true,
+    "php": true,
+    "biome": true
   }
 }
