--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -10,7 +10,7 @@
   "agent": {
     "default_model": {
       "provider": "copilot_chat",
-      "model": "grok-code-fast-1"
+      "model": "gpt-5-mini"
     },
     "model_parameters": []
   },
@@ -18,7 +18,7 @@
     "context7": {
       "source": "custom",
       "command": "bunx",
-      "args": ["@upstash/context7-mcp"]
+      "args": ["--bun","@upstash/context7-mcp"]
     },
     "serena": {
       "source": "custom",
@@ -33,17 +33,17 @@
     "sequential-thinking": {
       "source": "custom",
       "command": "bunx",
-      "args": ["@modelcontextprotocol/server-sequential-thinking"]
+      "args": ["--bun","@modelcontextprotocol/server-sequential-thinking"]
     },
     "memory": {
       "source": "custom",
       "command": "bunx",
-      "args": ["@modelcontextprotocol/server-memory"]
+      "args": ["-bun","@modelcontextprotocol/server-memory"]
     },
     "mcp-server-git": {
       "source": "custom",
       "command": "bunx",
-      "args": ["mcp-server-git"]
+      "args": ["--bun","mcp-server-git"]
     },
     "fetch": {
       "source": "custom",
